--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">PetLover</string>
+
+    <!-- exception -->
+    <string name="exception_message_generic">There was an application error</string>
+    <string name="exception_message_no_connection">There is no internet connection</string>
+    <string name="exception_message_not_found">Cannot retrieve data. Check your internet connection</string>
+    <string name="exception_market_not_found">没有检测到您安装的应用商店哦</string>
+
 </resources>
